src/test/ui/issues/issue-7813.stderr
error[E0282]: type annotations needed for `&[_]`
  --> $DIR/issue-7813.rs:2:13
   |
LL |     let v = &[];
   |             ^^^ cannot infer type
   |
help: consider giving this binding the explicit type `&[_]`, with the type parameters specified
   |
LL |     let v: &[_] = &[];
   |          ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
